--- a/src/main/resources/views/PrestamosMantenim.fxml
+++ b/src/main/resources/views/PrestamosMantenim.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -13,8 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="767.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="controller.PrestamosMantenimController">
+<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="767.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PrestamosMantenimController">
    <children>
       <BorderPane prefHeight="487.0" prefWidth="767.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -48,7 +48,6 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Nombre dispositivo:" />
@@ -57,25 +56,24 @@
                   <Label text="Modelo:" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                   <Label text="Nº serie:" GridPane.rowIndex="2" />
                   <Label text="Imei:" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                  <Label text="Nombre alumno:" GridPane.rowIndex="5" />
+                  <Label text="Alumno:" GridPane.rowIndex="5" />
                   <Label text="NRE:" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                  <Label text="Sede:" GridPane.rowIndex="6" />
-                  <Label text="Curso:" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-                  <DatePicker fx:id="dtpFechaIni" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                  <DatePicker fx:id="dtpFechaFin" GridPane.columnIndex="4" GridPane.rowIndex="8" />
-                  <Label text="Fecha de inicio:" GridPane.rowIndex="8" />
-                  <Label text="Fecha de fin:" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+                  <Label text="Sede:" GridPane.rowIndex="4" />
+                  <Label text="Curso:" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <DatePicker fx:id="dtpFechaIni" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <DatePicker fx:id="dtpFechaFin" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                  <Label text="Fecha de inicio:" GridPane.rowIndex="7" />
+                  <Label text="Fecha de fin:" GridPane.columnIndex="3" GridPane.rowIndex="7" />
                   <TextField fx:id="txtNombreDisp" editable="false" GridPane.columnIndex="1" />
                   <TextField fx:id="txtNetiqueta" editable="false" GridPane.columnIndex="4" />
                   <TextField fx:id="txtMarca" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField fx:id="txtModelo" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                   <TextField fx:id="txtNserie" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="txtImei" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                  <TextField fx:id="txtNombreAlu" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <TextField fx:id="txtNRE" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                  <TextField fx:id="txtSede" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="txtCurso" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-                  <Button mnemonicParsing="false" text="Seleccionar alumno" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+                  <TextField fx:id="txtCurso" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="304.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="cboxAlumno" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                </children>
                <padding>
                   <Insets left="20.0" right="50.0" top="10.0" />
